p2ws_package/Devpp2ws-Package/objects/Crew_List__c.object
<CustomObject>
    <fields>
        <fullName>Acting_Rank__c</fullName>
        <label>Acting Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrewId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>Crew Lists</relationshipLabel>
        <relationshipName>Crew_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CrewList_Temp__c</fullName>
        <label>CrewList Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Crew External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Crew_Temp__c</fullName>
        <label>Crew Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duty_Assignment__c</fullName>
        <label>Duty Assignment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duty_Code_F__c</fullName>
        <formula>CASE( Duty_Code__c, 
&apos;TVL&apos;, &apos;Passive&apos;, 
&apos;FLY&apos;, &apos;Active&apos;,
Duty_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duty Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duty_Code__c</fullName>
        <label>Duty Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipName>Crews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Temp__c</fullName>
        <label>Flight Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The crew’s language, such as “French” or “Chinese (Traditional).”</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_EVAL__c</fullName>
        <label>Last EVAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modifed_by_Webservice__c</fullName>
        <label>Last Modifed by Webservice</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Nickname of the crew.</description>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Eval__c</fullName>
        <label>No. of Eval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Fly__c</fullName>
        <label>POS Fly</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel_ID__c</fullName>
        <description>The crew’s employee number.</description>
        <formula>CrewId__r.Personel_Id__c</formula>
        <label>Personnel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <formula>Duty_Code_F__c &amp; 
&quot;-&quot; &amp; 
LPAD(TEXT(SEQ_No__c), 2 ,&quot;0&quot;)</formula>
        <label>Position Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank of the crew such as FC or AP.</description>
        <label>Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_No__c</fullName>
        <label>SEQ No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>returnfltdate__c</fullName>
        <label>returnfltdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnfltno__c</fullName>
        <label>returnfltno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Crew List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CrewId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>